# Flowstone

./: .gitignore  Cargo.toml  README.md  VOICE.md
.github/workflows/: ci.yml
flowstone-core/: Cargo.toml
flowstone-core/src/: db.rs  lib.rs  model.rs  parser.rs  yaml.rs  yaml_db.rs
flowstone-core/tests/fixtures/: infra.yaml  infrastack.yaml
flowstone-core/tests/fixtures/nodes/: postgresql.yaml  rivsprod02.yaml  x3customerpull.yaml  x3rocs-customer.yaml
flowstone-spec/: CONTENTS.md  DEPENDENCIES.md  IMPLEMENTATION.md  PROJECT.md  QUERIES.md  SCHEMA.md
flowstone-wasm/: Cargo.toml  build.sh  deploy.sh  dist-index.html  github-save.js  index.html  shim.js
flowstone-wasm/src/: lib.rs
prompts/: propose_tags.txt
src/: database.rs  main.rs  parser.rs  pipeline.rs  repl.rs  scanner.rs  server.rs  watcher.rs
static/: graph.js  index.html  style.css  yaml-graph.js
