[package]
name = "flowstone"
version = "0.1.0"
edition = "2021"

[dependencies]
cozo = { path = "../cozordb/cozo/cozo-core", features = ["storage-redb", "graph-algo"], default-features = false }
walkdir = "2"
regex = "1"
rustyline = "14"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
futures = "0.3"
