[package]
name = "flowstone"
version = "0.1.0"
edition = "2021"

[dependencies]
cozo = { path = "../cozordb/cozo/cozo-core", features = ["storage-redb", "graph-algo", "fts"], default-features = false }
walkdir = "2"
regex = "1"
rustyline = "14"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
futures = "0.3"

# graph_builder 0.4.1 on crates.io calls self.list.into_par_iter().copied() in
# edgelist.rs:125, which no longer type-checks under rayon 1.11+ because
# Box<[T]>::into_par_iter now yields owned tuples rather than references.
# Matt's fork carries the fix on fix/edgelist-par-iter (PR to neo4j-labs/graph
# pending). Route graph_builder through the fork until that PR merges. The
# `graph` crate itself doesn't need patching — only graph_builder's source
# changed — and trying to patch it triggered an "unused patch" warning because
# the fork bumped graph to 0.3.2 while cozo pins 0.3.1.
[patch.crates-io]
graph_builder = { git = "https://github.com/lawless-m/graph", branch = "fix/edgelist-par-iter" }
