[package]
name = "flowstone-wasm"
version = "0.1.0"
edition = "2021"
description = "Flowstone knowledge-graph in the browser: takes a zip of Markdown notes and exposes a CozoDB query API"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
# Enable FTS + rayon thread-pool bridged to web workers.
# Requires nightly + atomics build; see build.sh.
# We pull tantivy in directly so that from_zip can build the index with
# SingleSegmentIndexWriter (no background threads) instead of cozo's
# IndexWriter (which always spawns std::thread workers).
fts = ["flowstone-core/fts", "wasm-bindgen-rayon", "dep:tantivy"]

[dependencies]
flowstone-core = { path = "../flowstone-core", default-features = false }
cozo = { path = "../../cozordb/cozo/cozo-core", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

console_error_panic_hook  = { version = "0.1.7", optional = true }
wasm-bindgen-rayon        = { version = "1",     optional = true }
tantivy                   = { version = "0.22",  optional = true, default-features = false, features = ["stopwords"] }
